--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://13.125.0.90:3306
+spring.datasource.url=jdbc:mysql://13.125.0.90:3306?useSSL=false
 spring.datasource.username=dkeplusidb
 spring.datasource.password=Cjdsusqn2017!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
