--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mysql://13.125.0.90:3306
-spring.datasource.username=dkeplusidb
-spring.datasource.password=Cjdsusqn2017!
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://eplusi-dev-gyummy.c9eo7yqjaxpn.ap-northeast-2.rds.amazonaws.com:3306
+spring.datasource.username=gyummy
+spring.datasource.password=cman20!0
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.jpa.hibernate.ddl-auto=create-drop #test only!
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
