--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://eplusi-dev-gyummy.c9eo7yqjaxpn.ap-northeast-2.rds.amazonaws.com:3306
+spring.datasource.url=jdbc:mysql://eplusi-dev-gyummy.c9eo7yqjaxpn.ap-northeast-2.rds.amazonaws.com:3306?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=gyummy
 spring.datasource.password=cman20!0
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
