--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://eplusi-dev-gyummy.c9eo7yqjaxpn.ap-northeast-2.rds.amazonaws.com:3306?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=gyummy
-spring.datasource.password=cman20!0
+spring.datasource.url=jdbc:mysql://dkeplusi-dev.ct8b9k8eiiqx.ap-northeast-2.rds.amazonaws.com:3306?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=dkeplusi
+spring.datasource.password=cjdsusqn2017!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=false
