--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,8 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>pl.allegro.tech.boot</groupId>
-            <artifactId>handlebars-spring-boot-starter</artifactId>
-            <version>0.3.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
